--- a/src/app/Projecte/Components/rubrica/rubrica.component.html
+++ b/src/app/Projecte/Components/rubrica/rubrica.component.html
@@ -1,5 +1,5 @@
 <p>rubrica works!</p>
-<div *ngFor="let fila of this.baralla.getBaralla(); let vIndex = index">
+<div>
     <label> Criteri:
         <input type="text" placeholder="Insereix un criteri">
     </label>
