--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-rubrica></app-rubrica>
+
+<nav>
+    <ul>
+      <li>
+        <a routerLink="rubrica" routerLinkActive="active">
+          Criteri
+        </a>
+      </li>
+    </ul>
+</nav>
 <router-outlet></router-outlet>
