--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-
 <nav>
     <ul>
       <li>
-        <a routerLink="rubrica" routerLinkActive="active">
+        <a routerLink="criteri" routerLinkActive="active">
           Criteri
         </a>
       </li>
