--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,11 @@
           Criteri
         </a>
       </li>
+      <li>
+        <a routerLink="prova" routerLinkActive="active">
+          Prova
+        </a>
+      </li>
     </ul>
 </nav>
 <router-outlet></router-outlet>
