Practica FormulariCriterisValoracions  entregada

--- a/src/app/Projecte/Components/criteri/ReactiveForms/criteri/criteri.component.html
+++ b/src/app/Projecte/Components/criteri/ReactiveForms/criteri/criteri.component.html
@@ -4,37 +4,5 @@
 
 <hr>
 
-<fieldset formArrayName="infoProduct" class="mb-3">
-    <div class="row">
-        
-    </div>
-</fieldset>
-<!--<table #contenidorRubrica border="1">
-    <tr>
-        <td>            
-            <form [formGroup] ="this.criteriForm" (ngSubmit)="onSubmit()">
-                <label>Nom criteri: 
-                    <input type="text" formControlName="nomCriteri" placeholder="Escriu el nom del criteri">
-                    <label *ngIf="this.getControlNomCriteri().invalid">
-                        El nom és obligatori
-                    </label>
-                    <label *ngIf="this.criteriForm.controls['nomCriteri'].errors?.['minlength']">
-                        La longitud mínima
-                    </label>
-                </label>
-            </form>
-            <button #botoCriteri [disabled]="!this.criteriForm.valid" (click)="afegirCriteri()">
-                +
-            </button>
-        </td>
-        <td>
-            <button #botoValoracio [disabled]="!this.criteriForm.valid">
-                Afegir Valoracio
-            </button>
-            <button #botoCriteri [disabled]="!this.criteriForm.valid" (click)="afegirCriteri()">
-                +
-            </button>
-        </td>
-    </tr>
-    
-</table>-->
+<table #contenidorRubrica border="1">    
+</table>
