--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
         </a>
       </li>
       <li>
-        <a routerLink="prova" routerLinkActive="active">
-          Prova
+        <a routerLink="rubrica" routerLinkActive="active">
+          Rubrica
         </a>
       </li>
     </ul>
